src/test/resources/expected/test-exception-17.kore.golden
Parse error: ../../../test/resources//test-exception-17.kore:6:7:
  |
6 |     X:#S []
  |       ^
genericIdRawParser: Invalid first character '#'.
